infra/21. Ingress-nginx-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /otusapp/(.*)/(health)
            backend:
              service:
                name: app-service
                port:
                  number: 80
